# regime-sentinel-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cloudbuild.live-smoke.yaml  cloudbuild.live-soak.yaml  cloudbuild.yaml  package-lock.json  package.json  tailwind.config.cjs
apps/regime-replay/: Cargo.toml
apps/regime-replay/src/: main.rs
apps/regime-replay/tests/: latency_probe_cli.rs  replay_cli.rs
apps/regime-service/: Cargo.toml
apps/regime-service/src/: lib.rs  main.rs
apps/regime-service/tests/: demo_seed.rs  gemini_summary.rs  gemini_throttle.rs  http_api.rs  live_collector.rs  mongo_bootstrap.rs  mongo_documents.rs  mongo_indexes.rs  similar_windows.rs
crates/regime-core/: Cargo.toml
crates/regime-core/src/: lib.rs
crates/regime-core/tests/: alert_generation.rs  alert_scoring.rs  fair_probability.rs  feature_windows.rs  mongo_schema.rs  shift_labels.rs  validation_report.rs
demo/replay/: acceptance-lead-time-window.json  high-volatility-btc-window.json  latency-probe-window.json
demo/reports/: acceptance-lead-time-report.csv  acceptance-lead-time-report.json  backtest-run.sample.json  latency-probe-report.json  validation-report.csv  validation-report.json
docs/: acceptance.md  implementation-plan.md  mongodb-mcp.md
mcp/: mongodb.readonly.example.json
src/: app.css
src/lib/: dashboard.test.ts  dashboard.ts
src/routes/: +page.svelte
