[workspace]
members = [
    "crates/regime-core",
    "apps/regime-service",
    "apps/regime-replay",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/qiuqiuaiweb3/regime-sentinel-agent"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
mongodb = { version = "3", default-features = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "cors", "fs", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["serde", "v7"] }
